рефакторинг БД и свагера
исправил подключение к базе данных инмемори (объеденил все инстансы в
структуру, что бы можно было делать проверки на констрейнты между
инстансами.
изменил способ GET запросов с параметров на query
получилось гибкое решение, не надо плодить роуты
